--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,28 +6,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="30dp"
-    tools:context=".activity.LoginActivity">
+    tools:context=".activity.LoginActivity"
+    android:theme="@style/AppTheme.NoActionBar"
+    android:background="@android:color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_marginTop="72dp"
+        android:layout_alignParentStart="true"
+        android:weightSum="1">
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:id="@+id/imageView" />
+            android:layout_height="wrap_content"
+            android:id="@+id/image_login"
+            android:adjustViewBounds="true"
+            android:layout_gravity="center"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:textSize="30sp"
-            android:text="My Workout Tracker"
+            android:text="@string/app_name"
             android:gravity="center"
-            android:textColor="#ffffff"
+            android:textColor="@android:color/black"
             android:id="@+id/app_title"/>
 
         <LinearLayout
@@ -41,14 +45,14 @@
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp">
+                android:layout_marginTop="8dp">
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/email"
                     android:inputType="textEmailSubject"
-                    android:hint="E-mail"
+                    android:hint="@string/email_label"
                     android:textColorHint="@android:color/tab_indicator_text"
                     android:textColor="@android:color/tab_indicator_text"
                     android:singleLine="true" />
@@ -64,7 +68,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/password"
-                    android:hint="Senha"
+                    android:hint="@string/password_label"
                     android:textColorHint="@android:color/tab_indicator_text"
                     android:inputType="textPassword"
                     android:textColor="@android:color/tab_indicator_text"
@@ -82,8 +86,11 @@
                     android:id="@+id/btnLogin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Entrar"
-                    app:backgroundTint="@android:color/white"
+                    android:text="@string/login_label"
+                    android:textColor="@android:color/tab_indicator_text"
+                    app:backgroundTint="@android:color/tab_indicator_text"
+                    android:clickable="true"
+                    android:background="?android:attr/selectableItemBackground"
                     style="@style/Base.Widget.AppCompat.Button.Borderless"/>
 
             </LinearLayout>
@@ -95,9 +102,9 @@
         android:layout_height="40dp"
         android:layout_marginTop="15dp"
         android:textSize="20sp"
-        android:text="Esqueci minha senha"
+        android:text="@string/forgot_password_label"
         android:gravity="center"
-        android:textColor="#ffffff"
+        android:textColor="@android:color/tab_indicator_text"
         android:id="@+id/forgot_password"/>
 
     </LinearLayout>
