--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,14 +16,15 @@
         android:orientation="vertical"
         android:layout_marginTop="72dp"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:weightSum="1">
 
-        <ImageView
+        <!--<ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/image_login"
             android:adjustViewBounds="true"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"/>-->
 
         <TextView
             android:layout_width="match_parent"
@@ -32,7 +33,8 @@
             android:text="@string/app_name"
             android:gravity="center"
             android:textColor="@android:color/black"
-            android:id="@+id/app_title"/>
+            android:id="@+id/app_title"
+            fontPath="fonts/Quicksand-Light.ttf" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,7 +42,8 @@
             android:layout_marginTop="15dp"
             android:orientation="vertical"
             android:padding="10dp"
-            android:id="@+id/loginUI">
+            android:id="@+id/loginUI"
+            fontPath="fonts/Quicksand-Light.ttf" >
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -51,18 +54,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/email"
-                    android:inputType="textEmailSubject"
+                    android:inputType="textWebEmailAddress"
                     android:hint="@string/email_label"
                     android:textColorHint="@android:color/tab_indicator_text"
                     android:textColor="@android:color/tab_indicator_text"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:maxLines="1"
+                    fontPath="fonts/Quicksand-Light.ttf" />
 
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp">
+                android:layout_marginTop="8dp">
 
                 <EditText
                     android:layout_width="match_parent"
@@ -70,9 +75,11 @@
                     android:id="@+id/password"
                     android:hint="@string/password_label"
                     android:textColorHint="@android:color/tab_indicator_text"
-                    android:inputType="textPassword"
+                    fontPath="fonts/Quicksand-Light.ttf"
                     android:textColor="@android:color/tab_indicator_text"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:maxLines="1"/>
+                <!--android:inputType="textPassword"-->
 
             </android.support.design.widget.TextInputLayout>
 
@@ -91,7 +98,8 @@
                     app:backgroundTint="@android:color/tab_indicator_text"
                     android:clickable="true"
                     android:background="?android:attr/selectableItemBackground"
-                    style="@style/Base.Widget.AppCompat.Button.Borderless"/>
+                    style="@style/Base.Widget.AppCompat.Button.Borderless"
+                    fontPath="fonts/Quicksand-Medium.ttf" />
 
             </LinearLayout>
 
@@ -105,7 +113,8 @@
         android:text="@string/forgot_password_label"
         android:gravity="center"
         android:textColor="@android:color/tab_indicator_text"
-        android:id="@+id/forgot_password"/>
+        android:id="@+id/forgot_password"
+        fontPath="fonts/Quicksand-Light.ttf" />
 
     </LinearLayout>
 
