--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    tools:context="com.rodrigoftw.myworkouttracker.myworkouttracker.activity.TrainingScheduleActivity">
+    tools:context="com.rodrigoftw.myworkouttracker.myworkouttracker.activity.CalendarActivity">
 
     <include
         layout="@layout/app_bar_training_schedule"
