--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+<android.support.v4.widget.DrawerLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/drawer_layout"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:fitsSystemWindows="true"
+tools:openDrawer="start"
+tools:context="com.rodrigoftw.myworkouttracker.myworkouttracker.activity.CalendarActivity">
+
+<android.support.design.widget.CoordinatorLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start"
-    tools:context="com.rodrigoftw.myworkouttracker.myworkouttracker.activity.CalendarActivity">
+    tools:context=".activity.CalendarActivity">
 
-    <include
-        layout="@layout/app_bar_training_schedule"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <include layout="@layout/toolbar"
+        android:id="@+id/include" />
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_training_schedule"
-        app:menu="@menu/activity_training_schedule_drawer" />
+    <include layout="@layout/content_calendar" />
+
+</android.support.design.widget.CoordinatorLayout>
+
+<include layout="@layout/nav_view" />
 
 </android.support.v4.widget.DrawerLayout>
