--- a/app/src/main/res/layout/content_calendar.xml
+++ b/app/src/main/res/layout/content_calendar.xml
@@ -10,10 +10,17 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.rodrigoftw.myworkouttracker.myworkouttracker.activity.CalendarActivity">
+    tools:context="com.rodrigoftw.myworkouttracker.myworkouttracker.activity.CalendarActivity"
+    android:background="@android:color/white">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Calendar" />
+        android:text="Calendário"
+        android:textSize="20sp"
+        android:layout_gravity="center"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
