--- a/app/src/main/res/layout/content_training_schedule.xml
+++ b/app/src/main/res/layout/content_training_schedule.xml
@@ -11,11 +11,26 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.rodrigoftw.myworkouttracker.myworkouttracker.activity.TrainingScheduleActivity"
-    tools:showIn="@layout/app_bar_training_schedule">
+    android:background="@android:color/white">
+    <!--tools:showIn="@layout/activity_training_schedule"-->
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_gravity="center"
+        android:textSize="18sp"
+        android:text="24/03/2017 - Sexta: A - Peitoral/Dorsal"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <android.support.v7.widget.RecyclerView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/recyclerView"
+        android:layout_below="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
 
 </RelativeLayout>
