--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorControlActivated">#445963</item>
         <item name="android:actionOverflowButtonStyle">@style/CustomButtonOverflow</item>
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
@@ -15,6 +16,10 @@
     <!-- Style to replace actionbar overflow icon. set item 'android:actionOverflowButtonStyle' in AppTheme -->
     <style name="CustomButtonOverflow" parent="android:style/Widget.Holo.Light.ActionButton.Overflow">
         <item name="android:src">@drawable/ic_menu_settings</item>
+    </style>
+
+    <style name="LoginTheme" parent="AppTheme">
+        <item name="colorControlActivated">#445963</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
