--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:padding="30dp"
     tools:context=".activity.LoginActivity"
     android:theme="@style/AppTheme.NoActionBar"
-    android:background="@android:color/white">
+    android:background="@drawable/login_background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,7 +32,7 @@
             android:textSize="30sp"
             android:text="@string/app_name"
             android:gravity="center"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:id="@+id/app_title"
             fontPath="fonts/Quicksand-Light.ttf" />
 
@@ -56,8 +56,8 @@
                     android:id="@+id/email"
                     android:inputType="textWebEmailAddress"
                     android:hint="@string/email_label"
-                    android:textColorHint="@android:color/tab_indicator_text"
-                    android:textColor="@android:color/tab_indicator_text"
+                    android:textColorHint="@color/colorPrimaryDark"
+                    android:textColor="@color/colorPrimaryDark"
                     android:singleLine="true"
                     android:maxLines="1"
                     fontPath="fonts/Quicksand-Light.ttf" />
@@ -74,11 +74,11 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/password"
                     android:hint="@string/password_label"
-                    android:textColorHint="@android:color/tab_indicator_text"
-                    fontPath="fonts/Quicksand-Light.ttf"
-                    android:textColor="@android:color/tab_indicator_text"
+                    android:textColorHint="@color/colorPrimaryDark"
+                    android:textColor="@color/colorPrimaryDark"
                     android:singleLine="true"
-                    android:maxLines="1"/>
+                    android:maxLines="1"
+                    fontPath="fonts/Quicksand-Light.ttf" />
                 <!--android:inputType="textPassword"-->
 
             </android.support.design.widget.TextInputLayout>
@@ -94,8 +94,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/login_label"
-                    android:textColor="@android:color/tab_indicator_text"
-                    app:backgroundTint="@android:color/tab_indicator_text"
+                    android:textColor="@android:color/white"
+                    app:backgroundTint="@android:color/white"
                     android:clickable="true"
                     android:background="?android:attr/selectableItemBackground"
                     style="@style/Base.Widget.AppCompat.Button.Borderless"
@@ -112,7 +112,7 @@
         android:textSize="20sp"
         android:text="@string/forgot_password_label"
         android:gravity="center"
-        android:textColor="@android:color/tab_indicator_text"
+        android:textColor="@android:color/white"
         android:id="@+id/forgot_password"
         fontPath="fonts/Quicksand-Light.ttf" />
 
