--- a/app/src/main/res/layout/content_training_schedule.xml
+++ b/app/src/main/res/layout/content_training_schedule.xml
@@ -5,13 +5,13 @@
     android:id="@+id/content_training_schedule"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.rodrigoftw.myworkouttracker.myworkouttracker.activity.TrainingScheduleActivity"
     android:background="@android:color/white">
+    <!--android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"-->
     <!--tools:showIn="@layout/activity_training_schedule"-->
 
     <TextView
