--- a/app/src/main/res/layout/content_training_schedule.xml
+++ b/app/src/main/res/layout/content_training_schedule.xml
@@ -15,7 +15,7 @@
     <!--tools:showIn="@layout/activity_training_schedule"-->
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/currentTrainingDateTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -27,8 +27,8 @@
 
     <android.support.v7.widget.RecyclerView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/recyclerView"
-        android:layout_below="@+id/textView"
+        android:id="@+id/recyclerViewExercise"
+        android:layout_below="@+id/currentTrainingDateTextView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
