--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -32,6 +32,11 @@
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_people"
                 android:title="@string/nav_item_about" />
+
+            <item
+                android:id="@+id/nav_logout"
+                android:icon="@drawable/ic_directions_run_black"
+                android:title="@string/nav_item_logout" />
         </menu>
     </item>
 
