--- a/app/src/main/res/layout/content_history.xml
+++ b/app/src/main/res/layout/content_history.xml
@@ -7,25 +7,25 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.rodrigoftw.myworkouttracker.myworkouttracker.activity.HistoryActivity"
+    tools:showIn="@layout/activity_history"
     android:background="@android:color/white">
     <!--android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"-->
-    <!--tools:showIn="@layout/activity_history"-->
 
     <android.support.design.widget.TabLayout
-        android:layout_marginTop="?attr/actionBarSize"
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="fixed"
         app:tabGravity="fill"
         app:tabIndicatorColor="@color/colorPrimary"
-        app:tabSelectedTextColor="@color/colorAccent" />
+        app:tabSelectedTextColor="@color/colorSecondary" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
+        android:layout_below="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:overScrollMode="never"
