--- a/app/src/main/res/layout/adapter_simple_exercise_item.xml
+++ b/app/src/main/res/layout/adapter_simple_exercise_item.xml
@@ -3,121 +3,124 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:clickable="true"
-    android:background="?selectableItemBackground">
+    android:padding="10dp">
+    <!--android:clickable="true"
+    android:background="?selectableItemBackground"-->
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/exerciseName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:textColor="@android:color/black"
+        android:text="Exercício"
+        android:layout_gravity="start"
+        fontPath="fonts/Quicksand-Light.ttf" />
+
+    <RelativeLayout
+        android:id="@+id/exerciseInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/exerciseName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="@android:color/black"
-            android:text="Exercício"
-            android:layout_gravity="start"
-            android:layout_weight="1"
-            fontPath="fonts/Quicksand-Light.ttf" />
+        android:layout_below="@+id/exerciseName"
+        android:layout_marginTop="4dp">
 
         <TextView
             android:id="@+id/exerciseSets"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="@android:color/black"
+            android:textSize="14sp"
+            android:textColor="@color/colorPrimary"
             android:text="3 séries"
             android:gravity="center"
-            android:layout_weight="1"
             fontPath="fonts/Quicksand-Light.ttf" />
 
         <TextView
             android:id="@+id/exerciseReps"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="@android:color/black"
+            android:layout_toEndOf="@+id/exerciseSets"
+            android:layout_toRightOf="@+id/exerciseSets"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:textSize="14sp"
+            android:textColor="@color/colorPrimary"
             android:text="10 repetições"
             android:gravity="center"
-            android:layout_weight="1"
             fontPath="fonts/Quicksand-Light.ttf" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
-<!--
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:clickable="true"
-    android:background="?selectableItemBackground">
-
-    <LinearLayout
+    <!--
+    <?xml version="1.0" encoding="utf-8"?>
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:padding="10dp"
+        android:clickable="true"
+        android:background="?selectableItemBackground">
 
-        <TextView
-            android:id="@+id/exerciseName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="@android:color/black"
-            android:text="Exercício"
-            android:layout_gravity="start"
-            fontPath="fonts/Quicksand-Light.ttf" />
-        &lt;!&ndash;android:layout_weight="1"&ndash;&gt;
-
-        &lt;!&ndash;<LinearLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="3">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
             <TextView
-                android:id="@+id/exerciseSets"
+                android:id="@+id/exerciseName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:textColor="@android:color/black"
-                android:text="3 séries"
-                android:gravity="center"
-                android:layout_weight="1"
+                android:text="Exercício"
+                android:layout_gravity="start"
                 fontPath="fonts/Quicksand-Light.ttf" />
+            &lt;!&ndash;android:layout_weight="1"&ndash;&gt;
 
-            <TextView
-                android:id="@+id/exerciseReps"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textColor="@android:color/black"
-                android:text="10 repetições"
-                android:gravity="center"
-                android:layout_weight="1"
-                fontPath="fonts/Quicksand-Light.ttf" />
+            &lt;!&ndash;<LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="3">
 
-            <TextView
-                android:id="@+id/exerciseRest"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textColor="@android:color/black"
-                android:text="60 segundos"
-                android:gravity="center"
-                android:layout_weight="1"
-                fontPath="fonts/Quicksand-Light.ttf" />
+                <TextView
+                    android:id="@+id/exerciseSets"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@android:color/black"
+                    android:text="3 séries"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    fontPath="fonts/Quicksand-Light.ttf" />
 
-        </LinearLayout>&ndash;&gt;
+                <TextView
+                    android:id="@+id/exerciseReps"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@android:color/black"
+                    android:text="10 repetições"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    fontPath="fonts/Quicksand-Light.ttf" />
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/exerciseRest"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@android:color/black"
+                    android:text="60 segundos"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    fontPath="fonts/Quicksand-Light.ttf" />
 
-</RelativeLayout>-->
+            </LinearLayout>&ndash;&gt;
+
+        </LinearLayout>
+
+    </RelativeLayout>-->
