--- a/app/src/main/res/layout/activity_user_data.xml
+++ b/app/src/main/res/layout/activity_user_data.xml
@@ -34,18 +34,9 @@
             android:text="@string/change_user_image"
             android:gravity="center"
             android:layout_marginTop="12dp"
-            android:textColor="#99ffffff"
+            android:textColor="@color/colorDivider"
             android:textSize="13sp"/>
-
-        <View
-            android:id="@+id/imageDivider"
-            android:layout_width="match_parent"
-            android:layout_marginLeft="72dp"
-            android:layout_marginRight="72dp"
-            android:layout_marginStart="72dp"
-            android:layout_marginEnd="72dp"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider"/>
+            <!--android:textColor="#99ffffff"-->
 
     </LinearLayout>
 
@@ -71,13 +62,15 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:inputType="none">
 
                 <EditText
                     android:id="@+id/userName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textCapWords"
+                    android:inputType="none"
+                    android:focusable="false"
                     android:hint="@string/name_label"
                     android:textColorHint="@color/colorPrimaryDark"
                     android:textColor="@color/colorPrimaryDark"
@@ -103,78 +96,108 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <LinearLayout
+                android:id="@+id/passwordLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginTop="@dimen/margin_little">
 
-                <EditText
-                    android:id="@+id/userPassword"
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textWebPassword"
-                    android:hint="@string/password_label"
-                    android:textColorHint="@color/colorPrimaryDark"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:maxLines="1"
-                    fontPath="fonts/Quicksand-Light.ttf" />
+                    android:layout_height="match_parent"
+                    android:text="@string/change_password_label"
+                    android:textColor="@color/colorDivider"
+                    android:textSize="16sp"
+                    android:layout_marginTop="@dimen/margin_little"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginStart="4dp"/>
 
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/userNewPassword"
+                <View
+                    android:id="@+id/passwordDivider"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textWebPassword"
-                    android:hint="@string/new_password_label"
-                    android:textColorHint="@color/colorPrimaryDark"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:maxLines="1"
-                    fontPath="fonts/Quicksand-Light.ttf" />
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginRight="4dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginBottom="@dimen/margin_small"
+                    android:background="?android:attr/listDivider"/>
 
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/userConfirmNewPassword"
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textWebPassword"
-                    android:hint="@string/confirm_password_label"
-                    android:textColorHint="@color/colorPrimaryDark"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:maxLines="1"
-                    fontPath="fonts/Quicksand-Light.ttf" />
+                    android:layout_height="wrap_content">
 
-            </android.support.design.widget.TextInputLayout>
+                    <EditText
+                        android:id="@+id/userPassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textWebPassword"
+                        android:hint="@string/password_label"
+                        android:textColorHint="@color/colorPrimaryDark"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:maxLines="1"
+                        fontPath="fonts/Quicksand-Light.ttf" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/userNewPassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textWebPassword"
+                        android:hint="@string/new_password_label"
+                        android:textColorHint="@color/colorPrimaryDark"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:maxLines="1"
+                        fontPath="fonts/Quicksand-Light.ttf" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/userConfirmNewPassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textWebPassword"
+                        android:hint="@string/confirm_password_label"
+                        android:textColorHint="@color/colorPrimaryDark"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:maxLines="1"
+                        fontPath="fonts/Quicksand-Light.ttf" />
+
+                </android.support.design.widget.TextInputLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
 
     </ScrollView>
 
-    <View
-        android:id="@+id/buttonDivider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/scrollView"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:background="?android:attr/listDivider"/>
-
     <RelativeLayout
         android:id="@+id/buttonLayout"
-        android:layout_below="@+id/buttonDivider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true">
+
+        <View
+            android:id="@+id/buttonDivider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_above="@+id/btnSaveUserData"
+            android:background="?android:attr/listDivider"/>
+        <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/margin_small"-->
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btnSaveUserData"
