--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,7 +48,9 @@
     </style>
 
     <style name="LoginTheme" parent="AppTheme">
-        <item name="colorControlActivated">#445963</item>
+        <item name="colorControlActivated">@color/whiteColor</item> <!--#445963-->
+        <item name="colorAccent">@color/whiteColor</item>
+        <item name="colorControlNormal">@color/colorAccent</item>
     </style>
 
     <style name="EditUserDataTheme" parent="AppTheme">
